tests/snapshots/cli_list__list_all.snap
---
source: tests/cli_list.rs
expression: out
---
d3 -> C:\projects\d3
  d  -> Data  (uProject)
  notes  -> docs\notes
  sd  -> Shared/Data  (uProject)
  src  -> Source  (uProject)
    pri  -> Private  (uProject)
    pub  -> Public  (uProject)

Commands:
  -c = code
  -cc = claude
  -g = git status

Templates:
  uProject
