tests/snapshots/cli_list__list_subtree.snap
---
source: tests/cli_list.rs
expression: out
---
d3 -> C:\projects\d3
  src  -> Source
    pri  -> Private  (uProject)
    pub  -> Public  (uProject)
